--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bank API",
+  "name": "bank_api",
   "version": "1.0.0",
   "description": "Learning node express and mongodb",
   "main": "app.js",
