--- a/config.env
+++ b/config.env
@@ -1,10 +1,10 @@
 NODE_ENV=development
 PORT=3000
 DATABASE_USER=ekene
-DATABASE=mongodb+srv://ekene:<PASSWORD>@natours-cluster.nn6ac.mongodb.net/natours-db?retryWrites=true&w=majority
+DATABASE=mongodb+srv://ekene:<PASSWORD>@natours-cluster.nn6ac.mongodb.net/central-bank-genesys-db?retryWrites=true&w=majority
 PASSWORD=123456
 DATABASE_PASSWORD=84O7knxHPji7o7Yl
-JWT_SECRET=my-life-better-after-i-learn-node-and-mongodb
+JWT_SECRET=my-life-better-after-i-learn-node-and-mongodbb
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
 EMAIL_HOST=smtp.mailtrap.io
